--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "cov": "istanbul cover test/test.js -x test/test.js",
     "build": "browserify index.js -s rbush -o rbush.js",
     "build-min": "browserify index.js -s rbush | uglifyjs -c warnings=false -m > rbush.min.js",
-    "prepare": "npm run build && npm run build-min"
+    "do-not-prepare": "npm run build && npm run build-min"
   },
   "files": [
     "rbush.js",
